fix: Stopped tooltips from allowing sidescrolling on mobile (or showing up at all). Made tooltip placement better

--- a/vue-tailwindcss-blog/src/assets/base.css
+++ b/vue-tailwindcss-blog/src/assets/base.css
@@ -64,7 +64,26 @@ https://www.w3schools.com/css/css_tooltip.asp */
   z-index: 1;
 }
 
+.tooltiptexttop {
+  bottom: 100%;
+  left: 50%;
+  margin-left: -60px; /* Use half of the width (120/2 = 60), to center the tooltip */
+}
+
+.tooltiptextbottom {
+  top: 100%;
+  left: 50%;
+  margin-left: -60px; /* Use half of the width (120/2 = 60), to center the tooltip */
+}
+
 /* Show the tooltip text when you mouse over the tooltip container */
 .tooltip:hover .tooltiptext {
   visibility: visible;
+}
+
+/* Prevent tooltips from messing up layout on mobile */
+@media screen and (max-width: 640px) {
+  .tooltip .tooltiptext {
+    display: none;
+  }
 }
